[package]
name = "turbine_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "serializer_bench"
harness = false
